--- a/app/src/main/res/layout/paid_time_spinner_layout.xml
+++ b/app/src/main/res/layout/paid_time_spinner_layout.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="40dp"
-    android:layout_height="20dp"
-    android:textColor="@android:color/white"
+    android:layout_width="30dp"
+    android:layout_height="30dp"
+    android:textColor="@android:color/black"
     android:gravity="center"
-    android:textSize="10sp" />
+    android:background="@drawable/gradation"
+    android:textSize="16sp" />
